## Makefile.am -- an automake template for a Makefile.in file
## Epson Inkjet Printer Driver (ESC/P-R)
## Copyright (C) 2000-2006 AVASYS CORPORATION.
## Copyright (C) Seiko Epson Corporation 2000-2011.
##  This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

cupsppddir = $(CUPS_PPD_DIR)
cupsppd_DATA = \
Epson-AL-M2010-epson-escpage-raster-en.ppd	\
Epson-AL-M2310-epson-escpage-raster-en.ppd	\
Epson-AL-M2300-epson-escpage-raster-en.ppd	\
Epson-AL-C8600-epson-escpage-raster-en.ppd \
Epson-AL-C500-epson-escpage-raster-en.ppd	\
Epson-AL-C4100-epson-escpage-raster-en.ppd \
Epson-AL-C9100-epson-escpage-raster-en.ppd \
Epson-LP-8800C-epson-escpage-raster-en.ppd \
Epson-LP-9000C-epson-escpage-raster-en.ppd \
Epson-LP-9200C-epson-escpage-raster-en.ppd \
Epson-LP-9800C-epson-escpage-raster-en.ppd \
Epson-LP-M5000-epson-escpage-raster-en.ppd \
Epson-LP-M5300-epson-escpage-raster-en.ppd \
Epson-LP-S6500-epson-escpage-raster-en.ppd \
Epson-LP-S7500-epson-escpage-raster-en.ppd \
Epson-LP-S8100-epson-escpage-raster-en.ppd \
Epson-LP-S9000-epson-escpage-raster-en.ppd \
Epson-EPL-N2500-epson-escpage-raster-en.ppd \
Epson-LP-2500-epson-escpage-raster-en.ppd   \
Epson-LP-7900-epson-escpage-raster-en.ppd   \
Epson-LP-8900-epson-escpage-raster-en.ppd   \
Epson-LP-9000B-epson-escpage-raster-en.ppd  \
Epson-LP-9100-epson-escpage-raster-en.ppd	\
Epson-LP-9200B-epson-escpage-raster-en.ppd	\
Epson-LP-9400-epson-escpage-raster-en.ppd	\
Epson-LP-9600-epson-escpage-raster-en.ppd	\
Epson-LP-9600S-epson-escpage-raster-en.ppd	\
Epson-LP-S210-epson-escpage-raster-en.ppd	\
Epson-LP-S300-epson-escpage-raster-en.ppd	\
Epson-LP-S310-epson-escpage-raster-en.ppd	\
Epson-LP-S3000-epson-escpage-raster-en.ppd	\
Epson-LP-S3200-epson-escpage-raster-en.ppd	\
Epson-LP-S3500-epson-escpage-raster-en.ppd	\
Epson-LP-S4000-epson-escpage-raster-en.ppd	\
Epson-LP-S4200-epson-escpage-raster-en.ppd	\
Epson-LP-S4500-epson-escpage-raster-en.ppd


 
EXTRA_DIST = $(cupsppd_DATA)
